CHANGELOG

2015.01-117
- Correction du numéro de version (passé a 2011.xx-xxx a cause d'une erreur de frappe...)


2015.01-116
- Correction des mises à jour des données


2015.01-115
- Correction des plantages sur Wiko


2014.12-114
- Correction des plantages sur tablette


2014.12-113
- Recompilation avec le dernier SDK
- Correction de l'affichage tablette


2014.11-112
- Fix des titres de torrents dans les résultats de recherche
- Masquage de l'erreur de Captcha
- Densification de l'interface des résultats de recherche en mode paysage pour les grands écrans


2014.10-111
- Fix des recherches enregistrées, en tenant compte des champs avancés


2014.10-110
- Fix de l'affichage des descriptions sur tablettes / format paysage
- Nettoyage des logs dans le logcat



2014.10-109
- Fix des erreurs de mots-clé dans les recherches
- Fix de la messagerie qui reste visible dans le menu
- Fix du curseur dans la zone de recherche


2014.09-108
- Mise à jour des outils de développement
- Retrait du lien messagerie imposé dans la liste des applications
- Fix de "Mes recherches" ne renvoyant pas les bons résultats


2014.07-107
- Adaptation aux changements du site (changement de l'affichage du code de catégorie) dans les résultats de recherche et les top torrents
- correction des traductions


2014.06-106
- correction des traductions
- optimisations du code
- ajout de la déconnexion dans le slide menu


2014.03-105
- correction des plantages en cas de présence d'espaces dans les termes de recherche


2014.03-104
- Prise en compte des nouvelles options de recherche du site


2014.02-103
- Fix certains FC lors du listing des torrents
- Fix des erreurs d'ICC à l'ouverture des paramètres
- Fix de la pagination des torrents dans les résultats de recherche
- Cosmétique (critères inexistants dans les listes de torrents)


2014.02-102
- Fix connexion HTTPS
- Fix certains FC lors des recherches


2014.01-101
- Support des liens t411 (ouvrir avec...)