@@ -2,7 +2,8 @@ CHANGELOG
 
 2015.01-117
 - Correction du numéro de version (passé a 2011.xx-xxx a cause d'une erreur de frappe...)
-
+- Rétablissement du graphique
+- Rétablissement de la flèche de retour sur la calculatrice
 
 2015.01-116
 - Correction des mises à jour des données
